# YagaAi

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: DELIVERY_PROTOCOL.md  INDEX.md  agent-runtime-one-pager.md  epics-v2.md  epics-v3.md  epics-v4.md  epics-v5.md  yaga-1-us-draft-v2.md  yaga-1-us-draft-v3.md  yaga-1-us-draft.md
docs/agent-runtime/: 00-input-one-pager.md  00a-agreed-requirements.md  01-system-overview.md  02-core-model.md  03-runtime-and-a2a.md  04-channel-sessions-and-main-owner-routing.md  04-ownership-lifecycle-and-state.md  05-memory-model.md  05-ownership-lifecycle-and-state.md  06-internal-prompt-architecture.md  06-mission-control-model.md  07-memory-model-and-vectorization.md  07-operational-flows.md  08-failure-recovery-and-timeouts.md  08-mission-control-model.md  09-observability-and-audit.md  09-operational-flows.md  10-failure-recovery-and-timeouts.md  10-governance-and-v1-boundaries.md  11-implementation-decisions.md  11-observability-and-audit.md  12-channel-sessions-and-main-owner-routing.md  12-governance-and-v1-boundaries.md  13-implementation-decisions.md  14-hld-runtime-shape-and-installation.md  14-memory-and-vectorization.md  15-internal-prompt-architecture.md  15-tech-stack.md  README.md
docs/agent-runtime/contracts/: event-bus-v1.md  http-api-v1.md  internal-a2a-v1.md  webhook-callback-v1.md
docs/agent-runtime/data/: sql-schema-v1.md  state-projections-v1.md
docs/agent-runtime/implementation/: implementation-kickoff-v1.md  interfaces-v1.md  phase-1-task-breakdown-v1.md  repo-structure-v1.md
docs/agent-runtime/operations/: runbook-data-repair.md  runbook-handoff-failures.md  runbook-ingress-failures.md  runbook-publication-failures.md
docs/agent-runtime/reference/: agent-roles.md  artifact-model.md  canonical-events.md  canonical-statuses.md  event-topic-map.md  glossary.md  handoff-contract.md  policies.md
docs/agent-runtime/security/: security-baseline-v1.md
docs/agent-runtime/testing/: definition-of-done-v1.md  test-strategy-v1.md
docs/specs/: 2026-04-07-bootstrap-runtime-skeleton-design.md  2026-04-07-shared-contracts-design.md
docs/standards/: index.md
docs/superpowers/plans/: 2026-04-04-coding-kickoff-plan.md  2026-04-04-coding-readiness-execution-plan.md  2026-04-04-event-storming-alignment.md
docs/superpowers/specs/: 2026-04-04-event-storming-alignment-design.md
scripts/: lint.sh  test.sh
services/runtime/: .env.example  alembic.ini  pyproject.toml
services/runtime/alembic/: env.py
services/runtime/yaga_runtime/: __init__.py  config.py
tests/unit/: test_config.py  test_contracts_commands.py  test_contracts_commands_lifecycle.py  test_contracts_events.py  test_contracts_handoffs.py  test_contracts_http.py  test_contracts_shared.py  test_contracts_webhooks.py  test_smoke.py
