[tool.poetry]
name = "yaga-ai"
version = "0.1.0"
description = "Multi-agent runtime for AI development teams"
authors = ["YagaAi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4"
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
import-linter = ">=2.0"

# Local packages (path dependencies)
yaga-contracts = { path = "packages/contracts", develop = true }
yaga-persistence = { path = "packages/persistence", develop = true }
yaga-runtime-core = { path = "packages/runtime_core", develop = true }
yaga-runtime = { path = "services/runtime", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
